[tool.poetry]
name = "pydff-matrix"
version = "0.1.0"
description = ""
authors = ["JensDiemer <git@jensdiemer.de>"]

[tool.poetry.dependencies]
python = "^3.6"
matrix-synapse = "^1.12.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
